--- a/notebooks/game_vKarla.ipynb
+++ b/notebooks/game_vKarla.ipynb
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -38,35 +38,28 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
+        "from random import randint, sample\n",
+        "from scipy.interpolate import interp1d\n",
+        "from pickle import dump, load\n",
+        "\n",
+        "woi = \"preseizure1\"\n",
         "\n",
         "# from google.colab import drive\n",
         "# drive.mount('/content/gdrive')\n",
         "# main_folder = \"/content/gdrive/My Drive/epigame-folder/\"\n",
         "\n",
-        "woi = \"preseizure1\"\n",
-        "\n",
-        "main_folder = \"/media/kivi/ADATA HV100/epigame-folder/\"\n",
+        "# main_folder = \"/media/kivi/ADATA HV100/epigame-folder/\"\n",
         "# main_folder = \"/media/kivi/ADATA HV100/epigame-folder/epigame-folder-20230926T081603Z-023/epigame-folder/30sec/\"\n",
+        "main_folder = \"/home/kivi/Documents/\"\n",
         "\n",
         "# df = pd.read_csv(main_folder + f\"cvs_pairs_{woi}.csv\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "Index(['Unnamed: 0', 'Subject', 'Pair', 'Labels', 'CM', 'CVS'], dtype='object')"
-            ]
-          },
-          "execution_count": 3,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "df_beta = pd.read_csv(main_folder + f\"cvs_pairs_{woi}.csv\")\n",
         "df_gamma = pd.read_csv(main_folder + f\"cvs_pairs_{woi}_gamma.csv\")\n",
@@ -80,7 +73,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -88,15 +81,7 @@
         "id": "eg00pc90BZXk",
         "outputId": "5787f8dd-c934-4278-9674-660c66a8ef0a"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "['PAC', 'SCR-(0,4)', 'SCI-(0,4)', 'PLV-(0,4)', 'PLI-(0,4)', 'CC-(0,4)', 'SCR-(4,8)', 'SCI-(4,8)', 'PLV-(4,8)', 'PLI-(4,8)', 'CC-(4,8)', 'SCR-(8,13)', 'SCI-(8,13)', 'PLV-(8,13)', 'PLI-(8,13)', 'CC-(8,13)', 'SCR-(13,30)', 'SCI-(13,30)', 'PLV-(13,30)', 'PLI-(13,30)', 'CC-(13,30)', 'SCR-(30,70)', 'SCI-(30,70)', 'PLV-(30,70)', 'PLI-(30,70)', 'CC-(30,70)', 'SCR-(70,150)', 'SCI-(70,150)', 'PLV-(70,150)', 'PLI-(70,150)', 'CC-(70,150)']\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "connectivity_measures = list(df['CM'].unique())\n",
         "connectivity_measures.remove(\"PEC\")\n",
@@ -105,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "I1jZ1qaIBZXk"
       },
@@ -144,7 +129,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -155,7 +140,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -176,8 +161,11 @@
         "        self.cards = []  # Player's hand\n",
         "        self.score = []  # Player's score (not used in the provided code)\n",
         "        self.name = name\n",
+        "        \n",
+        "    def shuffle(hand):\n",
+        "            hand.cards = sorted(hand.deck)\n",
         "\n",
-        "    def check(self, scores):\n",
+        "    def check(scores):\n",
         "        \"\"\"\n",
         "        Parameters:\n",
         "        - scores: The scores to be checked.\n",
@@ -187,7 +175,7 @@
         "        \"\"\"\n",
         "        return scores.real\n",
         "\n",
-        "    def play(self, god, *players):\n",
+        "    def play(god, *players):\n",
         "        \"\"\"\n",
         "        Determines the player's move in a game.\n",
         "\n",
@@ -207,7 +195,7 @@
         "        else:\n",
         "            return min(god.cards)\n",
         "\n",
-        "    def card(self, draw):\n",
+        "    def card(draw):\n",
         "        \"\"\"\n",
         "        Draws a card based on the player's AI logic.\n",
         "\n",
@@ -218,6 +206,9 @@
         "        - int: The drawn card.\n",
         "        \"\"\"\n",
         "        return draw.logic(draw)\n",
+        "\n",
+        "def rn_choice(logic):\n",
+        "    return logic.cards.pop(randint(0,len(logic.cards)-1))\n",
         "\n",
         "# # Example Usage:\n",
         "# # Define an AI logic for drawing cards\n",
@@ -241,12 +232,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "from random import randint\n",
-        "\n",
         "def deck_average(of): return sum(of)/len(of)\n",
         "\n",
         "def deck_mm(of): return min(of)*max(of)/np.mean(of)\n",
@@ -280,12 +269,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
         "def play(*game):\n",
-        "    # Initialize each player's real and best score attributes to 0 and shuffle their cards\n",
+        "    # Initialize each player's real and best score attributes to 0\n",
         "    for player in game:\n",
         "        player.real, player.best = 0, 0\n",
         "        player.shuffle()\n",
@@ -316,18 +305,64 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def check_winners(summary_stat_label, sigmas):\n",
+        "    \"\"\"\n",
+        "    Check a summary_stat_labelegy's performance based on cross-validation scores and resection overlap.\n",
+        "\n",
+        "    Parameters:\n",
+        "    - summary_stat_label (str): summary_stat type (mm/mx/av/rd/coefvar).\n",
+        "    - sigmas (float): Number of standard deviations for defining the threshold.\n",
+        "\n",
+        "    Returns:\n",
+        "    - Tuple: (summary_stat_label, number of groups above threshold, winner-loser ratio).\n",
+        "    \"\"\"\n",
+        "\n",
+        "    # Load sorted players' cross-validation scores\n",
+        "    sorted_players = load(open(path_game_scores + f\"scores_{cm}_{summary_stat_label}_{n_cards}cards_{rounds}rounds_{turns}turns_{woi}_sub{sub}.p\", \"rb\"))\n",
+        "\n",
+        "    # Calculate group scores and resection matches\n",
+        "    group_scores = {tuple(g): sum([sum(sorted_players[player]) for player in sorted_players if nodes[player[0]] in g and nodes[player[1]] in g]) for g in rd_groups}\n",
+        "    resection_match = {players: [n for n in players if n in resection] for players in group_scores}\n",
+        "\n",
+        "    # Calculate statistical measures\n",
+        "    median = np.median(list(group_scores.values()))\n",
+        "    mean = np.average(list(group_scores.values()))\n",
+        "    std = np.std(list(group_scores.values()))\n",
+        "\n",
+        "    # Define threshold based on median and standard deviations\n",
+        "    thresh = median + (std * sigmas)\n",
+        "\n",
+        "    # Identify groups scoring above threshold\n",
+        "    winners_above_thresh = [players for players in group_scores if group_scores[players] >= thresh]\n",
+        "    N_winners_above_thresh = len(winners_above_thresh)\n",
+        "\n",
+        "    # Calculate resection overlap for winners and losers\n",
+        "    resection_overlap_winners = [len(resection_match[players]) for players in winners_above_thresh]\n",
+        "    resection_overlap_losers = [len(resection_match[players]) for players in resection_match if players not in winners_above_thresh]\n",
+        "\n",
+        "    # Calculate the winner-loser ratio\n",
+        "    winner_loser_ratio = np.mean(resection_overlap_winners) / np.mean(resection_overlap_losers)\n",
+        "\n",
+        "    return summary_stat_label, N_winners_above_thresh, winner_loser_ratio\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
         "# for testing\n",
-        "subs = [2]\n",
         "connectivity_measures = [\"PLI-(0,4)\"]"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -335,34 +370,17 @@
         "id": "E5Gj0_LiBZXm",
         "outputId": "cc18d1db-d27c-4524-f518-68b79afe1e6a"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Random group size = 4\n",
-            "Subject: 2\n",
-            "Connectivity measure: PLI-(0,4)\n",
-            "Summary statisctic for connectivity change: <function deck_average at 0x7fe7a27e3a60>\n"
-          ]
-        },
-        {
-          "ename": "TypeError",
-          "evalue": "unhashable type: 'list'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[1;32m/home/kivi/Documents/GitHub/epigame/notebooks/game_vKarla.ipynb Cell 13\u001b[0m line \u001b[0;36m4\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/kivi/Documents/GitHub/epigame/notebooks/game_vKarla.ipynb#X11sZmlsZQ%3D%3D?line=41'>42</a>\u001b[0m n_cards \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(hands[\u001b[39m0\u001b[39m][\u001b[39m1\u001b[39m]) \u001b[39m# number of cards in each player's deck\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/kivi/Documents/GitHub/epigame/notebooks/game_vKarla.ipynb#X11sZmlsZQ%3D%3D?line=43'>44</a>\u001b[0m remap \u001b[39m=\u001b[39m interp1d([\u001b[39m0\u001b[39m,\u001b[39m1\u001b[39m],[\u001b[39m1\u001b[39m,\u001b[39m100\u001b[39m]) \u001b[39m# remap values from 0 to 1, to 1 to 100\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/kivi/Documents/GitHub/epigame/notebooks/game_vKarla.ipynb#X11sZmlsZQ%3D%3D?line=45'>46</a>\u001b[0m game_score \u001b[39m=\u001b[39m {p:[] \u001b[39mfor\u001b[39;00m p \u001b[39min\u001b[39;00m [hand[\u001b[39m0\u001b[39m] \u001b[39mfor\u001b[39;00m hand \u001b[39min\u001b[39;00m hands]}\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/kivi/Documents/GitHub/epigame/notebooks/game_vKarla.ipynb#X11sZmlsZQ%3D%3D?line=47'>48</a>\u001b[0m \u001b[39mfor\u001b[39;00m r \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(n_cards):\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/kivi/Documents/GitHub/epigame/notebooks/game_vKarla.ipynb#X11sZmlsZQ%3D%3D?line=49'>50</a>\u001b[0m     game \u001b[39m=\u001b[39m [Player(AI\u001b[39m=\u001b[39msummary_stat, deck\u001b[39m=\u001b[39mhands[p], name\u001b[39m=\u001b[39mp, n_in_hand\u001b[39m=\u001b[39mn_cards) \u001b[39mfor\u001b[39;00m p \u001b[39min\u001b[39;00m players]\n",
-            "\u001b[1;32m/home/kivi/Documents/GitHub/epigame/notebooks/game_vKarla.ipynb Cell 13\u001b[0m line \u001b[0;36m4\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/kivi/Documents/GitHub/epigame/notebooks/game_vKarla.ipynb#X11sZmlsZQ%3D%3D?line=41'>42</a>\u001b[0m n_cards \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(hands[\u001b[39m0\u001b[39m][\u001b[39m1\u001b[39m]) \u001b[39m# number of cards in each player's deck\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/kivi/Documents/GitHub/epigame/notebooks/game_vKarla.ipynb#X11sZmlsZQ%3D%3D?line=43'>44</a>\u001b[0m remap \u001b[39m=\u001b[39m interp1d([\u001b[39m0\u001b[39m,\u001b[39m1\u001b[39m],[\u001b[39m1\u001b[39m,\u001b[39m100\u001b[39m]) \u001b[39m# remap values from 0 to 1, to 1 to 100\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/kivi/Documents/GitHub/epigame/notebooks/game_vKarla.ipynb#X11sZmlsZQ%3D%3D?line=45'>46</a>\u001b[0m game_score \u001b[39m=\u001b[39m {p:[] \u001b[39mfor\u001b[39;00m p \u001b[39min\u001b[39;00m [hand[\u001b[39m0\u001b[39m] \u001b[39mfor\u001b[39;00m hand \u001b[39min\u001b[39;00m hands]}\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/kivi/Documents/GitHub/epigame/notebooks/game_vKarla.ipynb#X11sZmlsZQ%3D%3D?line=47'>48</a>\u001b[0m \u001b[39mfor\u001b[39;00m r \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(n_cards):\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/kivi/Documents/GitHub/epigame/notebooks/game_vKarla.ipynb#X11sZmlsZQ%3D%3D?line=49'>50</a>\u001b[0m     game \u001b[39m=\u001b[39m [Player(AI\u001b[39m=\u001b[39msummary_stat, deck\u001b[39m=\u001b[39mhands[p], name\u001b[39m=\u001b[39mp, n_in_hand\u001b[39m=\u001b[39mn_cards) \u001b[39mfor\u001b[39;00m p \u001b[39min\u001b[39;00m players]\n",
-            "\u001b[0;31mTypeError\u001b[0m: unhashable type: 'list'"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "from scipy.interpolate import interp1d\n",
+        "path_game_scores = \"/media/kivi/ADATA HV100/epigame-folder/game_vKarla/\"\n",
+        "\n",
+        "summary_stat_label = [\"average\", \"mm\", \"coefvar\", \"max\", \"random\"]\n",
+        "\n",
+        "Subject, Outcome, CM, R, Group_size, Strategy, Sigmas, N_winners, Mean_overlap_ratio = [],[],[],[],[],[],[],[],[]\n",
         "\n",
         "for sub in subs:\n",
+        "\n",
+        "    surgical_outcome = 1 if sub in good_outcome_subjects else 0\n",
         "\n",
         "    all_nodes = NODES[str(sub)]\n",
         "    # print(f\"Total nodes = {len(all_nodes)}\")\n",
@@ -374,16 +392,16 @@
         "\n",
         "    r = 0.1\n",
         "    group_size = int(len(all_nodes)*r)\n",
-        "    print(\"Random group size =\", group_size)\n",
+        "    # print(\"Random group size =\", group_size)\n",
         "\n",
         "    players = [sorted(list(np.random.choice(all_nodes, size=group_size, replace=False))) for i in range(len(all_nodes)*5)]\n",
         "\n",
-        "    for summary_stat in [deck_average, deck_mm, deck_coef_of_variation, deck_max, deck_random]:\n",
+        "    for i,summary_stat in enumerate([deck_average, deck_mm, deck_coef_of_variation, deck_max, deck_random]):\n",
         "\n",
         "        for measure in connectivity_measures:\n",
         "            print(f\"Subject: {sub}\")\n",
         "            print(f\"Connectivity measure: {measure}\")\n",
-        "            print(f\"Summary statisctic for connectivity change: {summary_stat}\")\n",
+        "            print(f\"Summary statisctic for connectivity change: {summary_stat_label[i]}\")\n",
         "\n",
         "            df_sub_cm = df_sub[df_sub['CM'] == measure]\n",
         "\n",
@@ -405,23 +423,39 @@
         "\n",
         "            remap = interp1d([0,1],[1,100]) # remap values from 0 to 1, to 1 to 100\n",
         "            \n",
-        "            game_score = {p:[] for p in [hand[0] for hand in hands]}\n",
+        "            game_score = {str(p):[] for p in [hand[0] for hand in hands]}\n",
         "\n",
-        "            for r in range(n_cards):\n",
+        "            rounds=10\n",
+        "            for turn in range (rounds):\n",
         "\n",
-        "                game = [Player(AI=summary_stat, deck=hands[p], name=p, n_in_hand=n_cards) for p in players]\n",
+        "                for r in range(n_cards):\n",
         "\n",
-        "                play(*game)\n",
+        "                    game = [Player(AI=rn_choice, deck=hand[1], name=str(hand[0]), n_in_hand=n_cards) for hand in hands]\n",
         "\n",
-        "                scores = sorted([(player.name, player.score) for player in game], key=lambda x:x[1], reverse=True)\n",
+        "                    play(*game)\n",
         "\n",
-        "                top_score, fall = scores[0][1], 1\n",
-        "                for name, score in scores:\n",
-        "                    if score==top_score: game_score[name].append(1); fall+=1\n",
-        "                    elif score!=top_score: break\n",
-        "                for name,score in scores[fall:]: game_score[name].append(0)\n",
+        "                    scores = sorted([(player.name, player.score) for player in game], key=lambda x:x[1], reverse=True)\n",
         "\n",
-        "            sorted_players = {(int(k[1:-1].split(\", \")[0]),int(k[1:-1].split(\",\")[1])):v for k, v in sorted(game_score.items(), key=lambda item: sum(item[1]), reverse=True)}\n"
+        "                    top_score, fall = scores[0][1], 0\n",
+        "                    for name, score in scores:\n",
+        "                        if score==top_score: game_score[name].append(1); fall+=1\n",
+        "                        elif score!=top_score: break\n",
+        "                    for name,score in scores[fall:]: game_score[name].append(0)\n",
+        "\n",
+        "            sorted_players = {k:v for k, v in sorted(game_score.items(), key=lambda item: sum(item[1]), reverse=True)}\n",
+        "            dump(sorted_players, open(path_game_scores + f\"scores_{measure}_{summary_stat_label[i]}_{n_cards}cards_{rounds}rounds_preseizure1_sub{sub}.p\", \"wb\"))\n",
+        "\n",
+        "\n",
+        "            Subject.append(sub)\n",
+        "            Outcome.append(surgical_outcome)\n",
+        "            CM.append(measure)\n",
+        "            Strategy.append(summary_stat_label[i])\n",
+        "            Sigmas.append(sigmas)\n",
+        "            N_winners.append(x[1])\n",
+        "            Mean_overlap_ratio.append(x[2])\n",
+        "\n",
+        "surgical_outcome_prediciton_data = pd.DataFrame({\"Subject\":Subject, \"Outcome\":Outcome, \"CM\":CM, \"Strategy\":Strategy, \"Sigmas\":Sigmas, \"N_winners\":N_winners, \"Mean_overlap_ratio\":Mean_overlap_ratio})\n",
+        "surgical_outcome_prediciton_data.to_excel(path_game_scores+f\"surgical_outcome_data_{sigmas}sigma.xlsx\")"
       ]
     },
     {
